Fill form width overflow possible fix pt.8

--- a/components/pages/completare-cv/FillForm.css
+++ b/components/pages/completare-cv/FillForm.css
@@ -3,7 +3,6 @@
     padding: 0 20px;
     margin-bottom: 50px;
 
-    fieldset > label,
     label {
       display: flex;
       flex-direction: column;
@@ -14,7 +13,6 @@
 
       input,
       textarea {
-        max-width: 100%;
         background-color: #f5f5f513;
         border-radius: 5px;
         padding: 5px 10px;
@@ -48,6 +46,13 @@
         font-size: 20px;
         font-weight: 600;
         margin: 0 auto;
+      }
+
+      label {
+        textarea {
+          border: 1px solid red;
+          width: 200px;
+        }
       }
 
       .btn-add {
